[gd_scene load_steps=3 format=2]

[ext_resource path="res://Group/Group.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]

[node name="Group" type="Spatial"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Layout" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20

[node name="Resources" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Layout"]
margin_right = 984.0
margin_bottom = 21.0

[node name="Money" type="Label" parent="CanvasLayer/MarginContainer/Layout/Resources"]
unique_name_in_owner = true
margin_bottom = 21.0

[node name="Characters" type="GridContainer" parent="CanvasLayer/MarginContainer/Layout"]
unique_name_in_owner = true
margin_top = 41.0
margin_right = 984.0
margin_bottom = 41.0
columns = 3

[node name="Actions" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Layout"]
margin_top = 61.0
margin_right = 984.0
margin_bottom = 141.0
custom_constants/separation = 10

[node name="Audition" type="Button" parent="CanvasLayer/MarginContainer/Layout/Actions"]
margin_right = 984.0
margin_bottom = 20.0
text = "Audition"

[node name="Practice" type="Button" parent="CanvasLayer/MarginContainer/Layout/Actions"]
margin_top = 30.0
margin_right = 984.0
margin_bottom = 50.0
text = "Practice"

[node name="Perform" type="Button" parent="CanvasLayer/MarginContainer/Layout/Actions"]
margin_top = 60.0
margin_right = 984.0
margin_bottom = 80.0
text = "Perform"

[connection signal="pressed" from="CanvasLayer/MarginContainer/Layout/Actions/Audition" to="." method="_on_Audition_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Layout/Actions/Practice" to="." method="_on_Practice_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Layout/Actions/Perform" to="." method="_on_Perform_pressed"]
